--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# h2
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# mysql
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/st?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+
+spring.jpa.hibernate.ddl-auto=create-drop
