--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jackson.serialization.write-dates-as-timestamps=true
+spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
