--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.h2.console.enabled=true
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/st?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/st?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
