--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,19 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jackson.serialization.write-dates-as-timestamps=true
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring:
+    data:
+        web:
+            pageable:
+                page-parameter: page
+                size-parameter: size
+                one-indexed-parameters: true
+                default-page-size: 10
+                max-page-size: 50
